[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
edition = "2021"
homepage = "https://github.com/scattered-systems/flow/wiki"
license = "Apache-2.0"
repository = "https://github.com/scattered-systems/flow"
version = "0.1.12"

[workspace]
default-members = [
    "flow",
    "crates/fluidity"
]
exclude = ["xtask"]
members = [
    "flow",
    "crates/fluidity"
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
panic = "unwind"
rpath = false
opt-level = 'z'
overflow-checks = false