[workspace]
default-members = [
    "flow",
    "crates/fluidity"
]
exclude = ["xtask"]
members = [
    "flow",
    "crates/core",
    "crates/fluidity",
    "crates/network/*"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.6"
strum = "0.24"

[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Flow"
edition = "2021"
homepage = "https://github.com/scattered-systems/flow/wiki"
keywords = ["blockchain", "digital identity", "management", "scsys", "orchestration"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scattered-systems/flow"
version = "0.1.12"


[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
panic = "unwind"
rpath = false
opt-level = 'z'
overflow-checks = false