[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Flow"
edition = "2021"
homepage = "https://github.com/scattered-systems/flow/wiki"
keywords = ["blockchain", "digital-identity", "management", "scsys", "orchestration"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scattered-systems/flow"
version = "0.1.12-alpha"

[workspace]
default-members = [
    "flow",
    "crates/fluidity"
]

exclude = [
    "xtask"
]

members = [
    "flow",
    "bin/api",
    "crates/core",
    "crates/fluidity",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
smart-default = "0.7"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
panic = "unwind"
rpath = false
opt-level = 'z'
overflow-checks = false
