[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <jo3mccain@scattered-systems.com>"]
description = "Enabling users to quickly adapt to any environment with a complete DiD Toolkit"
edition = "2021"
license = "MIT"
name = "fluidity"
repository = "https://github.com/scattered-systems/flow/fluidity.git"
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
name = "fluidity"
path = "src/lib.rs"
test = true

[[test]]
name = "simple"
path = "tests/simple.rs"

[dependencies]

