[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Fluidity implements the application instances for Flow in support of the Scattered-Systems ecosystem"
edition = "2021"
homepage = "https://scattered-systems.github.io/flow"
keywords = ["blockchain", "digital identity", "management"]
license = "MIT"
name = "fluidity"
readme = "https://gitlab.com/scsys/flow/flow/#README"
repository = "https://gitlab.com/scsys/flow/flow"
version = "0.1.12"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fluidity"

[[bin]]
bench = false
name = "flow"

[build-dependencies]

[dependencies]
axum = { features = ["headers", "http2", "ws"], version = "0.5.16" }
clap = { features = ["derive"], version = "4.0.8" }
ethers = "1.0.0"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.20" }
opentelemetry = { features = ["rt-tokio"], version = "0.18.0" }
opentelemetry-jaeger = { features = ["full"], version = "0.17.0" }
reqwest = { features = ["stream"], version = "0.11.12" }
scsys = { features = ["full"], git = "https://github.com/scattered-systems/scsys", version = "0.1.26" }
serde = { default-features = false, features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.21.2" }
tokio-stream = "0.1.10"
tower = "0.4.13"
tower-cookies = "0.7.0"
tower-http = { features = ["full"], version = "0.3.4" }
tracing = "0.1.36"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { features = ["env-filter"], version = "0.3.15" }

[dev-dependencies]

