[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Fluidity implements the application instances for Flow in support of the Scattered-Systems ecosystem"
edition = "2021"
homepage = "https://github.com/scattered-systems/flow/wiki"
keywords = ["blockchain", "digital identity", "management"]
license = "MIT"
name = "fluidity"
readme = "README.md"
repository = "https://github.com/scattered-systems/flow"
version = "0.1.12"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fluidity"

[build-dependencies]

[dependencies]
ethers = "1.0.0"
scsys = { features = ["full"], git = "https://github.com/scattered-systems/scsys", version = "0.1.26" }
serde = { default-features = false, features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }
tokio = "1.21.2"

[dependencies.fluidity-sdk]
path = "../crates/sdk"
version = "0.1.12"

[dev-dependencies]

