[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "xtask"
edition = "2021"
homepage = "https://github.com/FL03/pzzld-eth-app/wiki"
keywords = [ "utility", "xtask" ]
license = "Apache-2.0"
name = "xtask"
repository = "https://github.com/FL03/pzzld-eth-app"
version = "0.1.0"

[build-dependencies]

[dependencies]
anyhow = "1.0.68"
clap = { features = ["cargo", "derive", "env"], version = "4.0.29" }
devx-cmd = "0.5.0"
devx-pre-commit = "0.5.0" 
duct = "0.13.6"
man = "0.3.0"
serde = { features = ["derive"], version = "1.0.151" }
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wild = "2.1.0"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
