[package]
authors.workspace = true
default-run = "xtask"
description = "xtask is a tool for managing the application's development workflow."
edition.workspace = true
name = "xtask"
publish = false
version = "0.1.0"

[[bin]]
bench = false
doctest = false
name = "xtask"
test = false

[build-dependencies]

[dependencies]
anyhow = "1"
clap = { features = ["cargo", "derive", "env"], version = "4" }
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
