[package]
authors = [
    "FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)",
    "Scattered-Systems (https://gitlab.com/scsys)"
]
categories = []
description = "The core package for fluidity is a complete digital identity management solution."
edition = "2021"
homepage = "https://gitlab.com/scsys/crates/fluidity/-/wiki"
keywords = ["core", "scsys"]
license = "MIT"
name = "fluidity-core"
repository = "https://gitlab.com/scsys/crates/fluidity"
version = "0.1.6" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
dotenv = "0.15.0"
glob = "0.3.0"
jsonwebtoken = "8.1.1"
rand = "0.8.5"
reqwest = { features = ["blocking", "cookies", "gzip", "json", "stream"], version = "0.11.12" }
scsys = { features = ["full"], git = "https://github.com/scattered-systems/scsys", version = "0.1.26" }
secp256k1 = { features = ["rand"], version = "0.24.0" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }
sha2 = "0.10.6"
tiny-keccak = { features = ["sha3"], version = "2.0.2" }
tokio = { features = ["full"], version = "1.21.1" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]