[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["core", "flow", "scsys"]
license.workspace = true
name = "fluidity-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["std"]

std = ["tokio"]
wasi = ["tokio"]
wasm = []

tokio = ["tokio/io-util", "tokio/macros", "tokio/rt", "tokio/sync", "tokio/time"]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
async-trait.workspace = true
bytes = "1"
chrono.workspace = true
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { features = ["io-util", "macros", "rt", "sync", "time"], version = "1"}

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]
gloo = { features = ["futures"], version = "0.8" }
js-sys = "0.3"
wasm-bindgen = { features = ["serde-serialize"], version = "0.2" }
wasm-bindgen-futures = "0.4"

[target.wasm32-wasi]
