[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["core", "flow", "scsys"]
license.workspace = true
name = "fluidity-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

wasi = []

wasm = []

serde = [
    "dep:serde",
    "serde-ext",
]

serde-ext = [
    "dep:serde_json",

]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
rand = "0.8"
serde = { optional = true, features = ["derive"], version = "1" }
serde_json = {optional = true, version = "1"}
smart-default.workspace = true
strum = { features = ["derive"], version = "0.26" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]
gloo = { features = ["futures"], version = "0.11" }
js-sys = "0.3"
wasm-bindgen = { features = ["serde-serialize"], version = "0.2" }
wasm-bindgen-futures = "0.4"

[target.wasm32-wasi.dependencies]
