[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "fluidity"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

wasm = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]


[dependencies]
chrono = "0.4"
gloo = { features = ["futures"], version = "0.9" }
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio = { features = ["macros"], version = "1" }
wasm-bindgen = { features = ["serde-serialize"], version = "0.2" }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
features = [
    "HtmlElement",
    "Node"
]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
