[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "fluidity"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "core",
    "net",
]
full = ["core", "net"]

core = [
    "fluidity-core"
]
net = [
    "fluidity-net"
]

wasi = [
    
]
wasm = []



[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
# SDK
fluidity-core = { features = [], optional = true, path = "../core", version = "0.1.12" }
fluidity-net = { features = [], optional = true, path = "../network/net", version = "0.1.12" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]


[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.wasm32-wasi]