[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "fluidity"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "core",
]

full = [
    "core",
    "serde",
]

core = [
    "dep:fluidity-core",
]

wasi = []

wasm = []

# serde = [
#     "fluidity-core/serde",
# ]

serde = [
    "dep:serde",
    "serde-ext",
    "fluidity-core/serde",
    "scsys/serde",
    "petgraph/serde-1",
]

serde-ext = [
    "dep:serde_json",
]

# tokio = [
#     "dep:tokio"
# ]


[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
scsys = { features = ["derive"], version = "0.2" }
anyhow.workspace = true
async-trait = "0.1"
crossbeam = "0.8"
futures = "0.3"
petgraph = "0.6"
serde = { optional = true, features = ["derive"], version = "1" }
serde_json = { optional = true, version = "1" }
smart-default.workspace = true
strum = { features = ["derive"], version = "0.26" }

# tokio = { features = ["macros", "sync", "time"], optional = true, version = "1" }
tokio = { features = ["rt"], version = "1" }
tracing = { features = ["log"], version = "0.1" }

# SDK
[dependencies.fluidity-core]
features = []
optional = true
path = "../core"
version = "0.1.12-alpha"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]


[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.wasm32-wasi]
