[package]
authors = [
    "FL03 <jo3mccain@icloud.com> (https://github.com/FL03)",
    "Scattered-Systems (https://github.com/scattered-systems)"
]
categories = []
description = "The core package for fluidity is a complete digital identity management solution."
edition = "2021"
homepage = "https://scattered-systems.github.io/fluidity"
keywords = ["core", "scsys"]
license = "MIT"
name = "fluidity-core"
repository = "https://github.com/scattered-systems/fluidity"
version = "0.1.4" # TODO - Update cargo package version

[lib]
test = true

[dependencies]
anyhow = "1.0.59"
chrono = "0.4.19"
dotenv = "0.15.0"
glob = "0.3.0"
jsonwebtoken = "8.1.1"
rand = "0.8.5"
reqwest = { features = ["blocking", "cookies", "gzip", "json", "stream"], version = "0.11.11" }
secp256k1 = { features = ["rand"], version = "0.24.0" }
serde = { features = ["derive"], version = "1.0.143" }
serde_json = "1.0.82"
sha2 = "0.10.2"
siwe = "0.4.1"
tiny-keccak = "2.0.2"
tokio = { features = ["full"], version = "1.20.1" }
web3 = "0.18.0"

[dependencies.scsys]
features = ["full"]
version = "0.1.12"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]