[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = []
description = "Flow is a complete digital identity platform"
edition = "2021"
homepage = "https://scattered-systems.github.io/flow/"
keywords = []
license = "MIT"
name = "fluidity"
readme = "README.md"
repository = "https://github.com/scattered-systems/flow"
version = "0.1.5"

[features]
default = []
full = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
chrono = "0.4.19"
config = "0.13.1"
digest = "0.10.3"
futures = "0.3.21"
glob = "0.3.0"
hex = "0.4.3"
log = "0.4.17"
openidconnect = "2.3.2"
rand = "0.8.5"
rand_core = "0.6.3"
reqwest = "0.11.11"
scsys = { features = ["full"], version = "0.1.7" }
serde = { features = ["derive"], version = "1.0.139" }
serde_json = "1.0.82"
siwe = "0.4.1"
tokio = { features = ["full"], version = "1.20.0" }
web3 = "0.18.0"

[dev-dependencies]
