[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "fluidity-net"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

wasm = []

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
fluidity-layers = { path = "../layers" }

chrono = "0.4"
serde.workspace = true
serde_json.workspace = true


[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
