[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["layers", "libp2p", "network", "scsys"]
license.workspace = true
name = "fluidity-layers"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

wasm = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
