[package]
authors.workspace = true
categories = []
description = "This crate provides the individual protocols powering Flow's adaptive peer-to-peer networking stack"
edition.workspace = true
homepage.workspace = true
keywords = ["minis", "libp2p", "network", "scsys"]
license.workspace = true
name = "fluidity-minis"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["tokio"]


wasi = []
wasm = []

tokio = [
    "tokio/io-util",
    "tokio/macros",
    "tokio/rt",
    "tokio/sync",
    "tokio/time"
]


[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes = "1"
chrono.workspace = true
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { features = ["io-util", "macros", "sync", "time"], version = "1"}
tracing = { features = [], version = "0.1" }

[dependencies.libp2p]
features = [
    "cbor",
    "request-response",
    "serde"
]
version = "0.52.1"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-wasi.dependencies]
tokio_wasi = { features = ["macros"], optional = true, version = "1" }

[target.wasm32-wasi.features]
tokio_wasi = [
    "tokio_wasi/macros"
]
