[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["networking", "scsys"]
license.workspace = true
name = "fluidity-net"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

wasm = []

libp2p = [
    "libp2p/identify",
    "libp2p/kad",
    "libp2p/ping",
    "libp2p/request-response",

]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
fluidity-proto = { features = [], path = "../proto", version = "0.1.12" }

fluidity-core = { features = [], path = "../../core", version = "0.1.12" }

anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dependencies.libp2p]
features = [
    "ed25519",
    "identify",
    "kad",
    "macros",
    "noise",
    "ping",
    "request-response",
    "tcp",
    "tokio",
    "yamux",
]
version = "0.52.1"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
