[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["networking", "scsys"]
license.workspace = true
name = "fluidity-net"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
wasi = []
wasm = []

libp2p = [
    "libp2p/identify",
    "libp2p/kad",
    "libp2p/ping",
    "libp2p/request-response",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
# core sdk
fluidity-core = { features = [], path = "../../core", version = "0.1.12" }
# re-exports
fluidity-minis = { features = [], path = "../minis", version = "0.1.12" }

# base 
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

tracing = { features = [], version = "0.1" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { features = ["macros"], version = "1"}

[dependencies.libp2p]
features = [
    "ed25519",
    "identify",
    "kad",
    "macros",
    "mdns",
    "noise",
    "ping",
    "request-response",
    "serde",
    "tcp",
    "tokio",
    "yamux",
]
version = "0.52.1"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi.dependencies]
tokio_wasi = { features = [], version = "1" }
