[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["networking", "scsys"]
license.workspace = true
name = "fluidity-net"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
wasi = []
wasm = []

libp2p = [
    "libp2p/identify",
    "libp2p/kad",
    "libp2p/ping",
    "libp2p/request-response",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes = "1"
chrono.workspace = true
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { features = ["io-util", "macros", "sync", "time"], version = "1"}
tracing = { features = [], version = "0.1" }

[dependencies.fluidity-core]
features = []
path = "../../core"
version = "0.1.12"

[dependencies.fluidity-minis]
features = []
path = "../minis"
version = "0.1.12"

[dependencies.libp2p]
features = [
    "ed25519",
    "identify",
    "kad",
    "macros",
    "mdns",
    "noise",
    "ping",
    "request-response",
    "serde",
    "tcp",
    "tokio",
    "yamux",
]
version = "0.52"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi.dependencies]
tokio_wasi = { features = [], version = "1" }
