[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["minis", "libp2p", "network", "scsys"]
license.workspace = true
name = "fluidity-proto"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

wasm = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dependencies.libp2p]
features = [
    "request-response",
]
version = "0.52.1"

[dev-dependencies]



[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
